--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-dark justify-content-end mb-4">
     <div class="row">
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/customers">Customers</a>
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/orders">Orders</a>
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/articles">Articles</a>
+        <a class="btn btn-dark col mx-1 py-0" routerLink="/customer">Customers</a>
+        <a class="btn btn-dark col mx-1 py-0" routerLink="/order">Orders</a>
+        <a class="btn btn-dark col mx-1 py-0" routerLink="/article">Articles</a>
     </div>
 </nav>
