--- a/src/app/customer-details/customer-details.component.html
+++ b/src/app/customer-details/customer-details.component.html
@@ -1,47 +1,76 @@
 <div class="container" *ngIf="customer">
 
     <h1>{{customer.firstName}} {{customer.lastName}}</h1>
-    <table class="table p-0 m-0">
-        <tr>
-            <th>Id</th>
-            <td>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col">Id</div>
+            <div class="col">
                 <input 
                 readonly
+                class="form-control"
                 value={{customer.id}}>
-            </td>
-        </tr>
-        <tr>
-            <th>First Name</th>
-            <td>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">First Name</div>
+            <div class="col">
                 <input 
+                class="form-control"
                 [(ngModel)]="customer.firstName">
-            </td>
-        </tr>
-        <tr>
-            <th>Last Name</th>
-            <td>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">Last Name</div>
+            <div class="col">
                 <input 
+                class="form-control"
                 [(ngModel)]="customer.lastName">
-            </td>
-        </tr>
-        <tr>
-            <th>Phone</th>
-            <td>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">Phone</div>
+            <div class="col">
                 <input 
+                class="form-control"
                 [(ngModel)]="customer.phone">
-            </td>
-        </tr>
-        <tr>
-            <th>Email</th>
-            <td>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">Email</div>
+            <div class="col">
                 <input 
+                class="form-control"
                 [(ngModel)]="customer.email">
-            </td>
-        </tr>
-    </table>
-    <button
-    class="btn btn-primary"
-    (click)="save(); goBack()">
-        Save
-    </button>
+            </div>
+        </div>
+        <div class="row align-items-center mt-2">
+            <div class="col"><h5>Billing Address</h5></div>
+        </div>
+        <app-input-address
+        [(inputModel)]="customer.billingAddress">
+        </app-input-address> 
+
+        <div class="row align-items-center mt-2">
+            <div class="col"><h5>Delivery Address</h5></div>
+        </div>
+        <app-input-address
+        [(inputModel)]="customer.deliveryAddress">
+        </app-input-address> 
+        
+
+  
+        <button
+        class="btn btn-primary my-3"
+        (click)="save(); goBack()">
+            Save
+        </button>
+    </div>
+
+</div>
+
+<div class="container text-center">
+    <img 
+    *ngIf="!customer"
+    class="m-5 text-center"
+    src="assets/spinner.gif">
 </div>
