--- a/src/app/input-address/input-address.component.html
+++ b/src/app/input-address/input-address.component.html
@@ -1,57 +1,57 @@
 
     <div class="row align-items-center">
-        <div class="col"> CountryCode </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.countryCode">
-        </div>
+        <label class="col"> CountryCode </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.countryCode">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> Zip Code </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.zipCode">
-        </div>
+        <label class="col"> Zip Code </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.zipCode">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> State </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.state">
-        </div>
+        <label class="col"> State </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.state">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> City </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.city">
-        </div>
+        <label class="col"> City </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.city">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> Street </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.street">
-        </div>
+        <label class="col"> Street </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.street">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> House Number </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.houseNumber">
-        </div>
+        <label class="col"> House Number </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.houseNumber">
+
     </div>
     <div class="row align-items-center">
-        <div class="col"> Recipient </div>
-        <div class="col">
-            <input 
-            class="form-control"
-            [(ngModel)]="inputModel.recipient">
-        </div>
+        <label class="col"> Recipient </label>
+
+        <input 
+        class="col form-control"
+        [(ngModel)]="inputModel.recipient">
+
     </div>
