--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -8,14 +8,18 @@
                 <div class="col"> Customer </div>
                 <div class="col"> Order Type </div>
                 <div class="col"> Last Item </div>
+                <div class="col-1"> </div>
             </div>
-            <div class="row clickable-row p-0 m-0 border-bottom" *ngFor="let order of orderList">
+            <div 
+            class="row clickable-row p-0 m-0 border-bottom" 
+            routerLink="/order/details/{{order.id}}"
+            *ngFor="let order of orderList">
                 <a 
-                routerLink="/order/details/{{order.id}}"
                 class="col-1 m-0"> 
                     {{order.id}} 
                 </a>
                 <a 
+                (click)="$event.stopPropagation()"
                 routerLink="/customer/details/{{order.customerId}}"
                 class="col m-0"> 
                     {{order.customerId}} 
@@ -28,7 +32,33 @@
                 class="col m-0"> 
                     {{order.items[order.items.length-1].articleId}} 
                 </a>
-            </div>            
+
+                <button
+                class="col-1 btn btn-default p-0"
+                type="button"
+                (click)="$event.stopPropagation();delete(order.id)">
+                    <span 
+                    class="badge badge-danger badge-pill align-text-center"
+                    title="Delete Order {{order.id}}">
+                        -
+                    </span>
+                </button>
+            </div>      
+            
+            <div class="row mt-1 justify-content-center">
+                <button
+                class="col-3 btn btn-lg btn-default p-0"
+                type="button"
+                (click)="createOrder()"
+                routerLink="/order/details/{{getMaxId()+1}}">
+                    <span 
+                    class="col-12 badge badge-primary badge-pill align-text-center"
+                    title="Add new Order">
+                        +
+                    </span>
+                </button>
+            </div>
+
         </div>
 
         <div class="container text-center">
