--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -15,9 +15,15 @@
         <div class="row align-items-center">
             <label class="col-6"> Customer Id </label>
 
-            <input  
+            <select
             class="col form-control"
             [(ngModel)]="order.customerId">
+                <option
+                *ngFor="let customer of customerList"
+                [ngValue]="customer.id">
+                    {{getCustomerName(customer.id)}}
+                </option>
+            </select>
 
         </div>
         <div class="row align-items-center">
@@ -71,6 +77,18 @@
         [(inputModel)]="order.items[i]">
         </app-input-item>
 
+        <div class="row mt-1 justify-content-center">
+            <button
+            class="col-3 btn btn-lg btn-default p-0"
+            type="button"
+            (click)="addItem()">
+                <span 
+                class="col-12 badge badge-primary badge-pill align-text-center"
+                title="Add Item">
+                    +
+                </span>
+            </button>
+        </div>
 
         <div class="row align-items-center mt-2">
             <h5 class="col"> Billing Address</h5>
