removed modal service

--- a/src/app/customer-details/customer-details.component.html
+++ b/src/app/customer-details/customer-details.component.html
@@ -114,7 +114,7 @@
         id="myModalInfo"
         textDismiss="Leave anyway"
         textAccept="Stay"
-        (accept)="acceptDeactivate()">
+        [status]="modalStatus">
             <p> Changes have not been saved. There are still mandatory values missing </p>
         </app-modal-info>
 
