--- a/src/app/modal-info/modal-info.component.html
+++ b/src/app/modal-info/modal-info.component.html
@@ -10,7 +10,7 @@
                 type="button" 
                 class="close" 
                 data-dismiss="modal"
-                (click)="onDismiss($event)">&times;</button>
+                (click)="setAccepted(false)">&times;</button>
             </div>
 
             <!-- Modal body -->
@@ -24,7 +24,7 @@
                 type="button" 
                 class="btn btn-primary" 
                 data-dismiss="modal"
-                (click)="onAccept($event)">
+                (click)="setAccepted(true)">
                     <span *ngIf="!textAccept">Okay</span>
                     <span *ngIf="textAccept">{{textAccept}}</span>
                 </button>
@@ -32,7 +32,7 @@
                 type="button" 
                 class="btn btn-danger" 
                 data-dismiss="modal"
-                (click)="onDismiss($event)">
+                (click)="setAccepted(false)">
                     <span *ngIf="!textDismiss">Close</span>
                     <span *ngIf="textDismiss">{{textDismiss}}</span>
                 </button>
