--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,16 @@
 <nav class="navbar bg-dark justify-content-end mb-4">
     <div class="row">
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/customer">Customers</a>
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/order">Orders</a>
-        <a class="btn btn-dark col mx-1 py-0" routerLink="/article">Articles</a>
+        <a 
+        class="btn btn-dark col mx-1 py-0" 
+        routerLink="/customer"
+        routerLinkActive="active">Customers</a>
+        <a 
+        class="btn btn-dark col mx-1 py-0" 
+        routerLink="/order"
+        routerLinkActive="active">Orders</a>
+        <a 
+        class="btn btn-dark col mx-1 py-0" 
+        routerLink="/article"
+        routerLinkActive="active">Articles</a>
     </div>
 </nav>
