--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -65,10 +65,7 @@
 
     </div>
 
-    <div class="container text-center">
-        <img 
-        *ngIf="!customerList"
-        class="m-5 text-center"
-        src="assets/spinner.gif">
-    </div>
 </div>
+
+
+<app-loading *ngIf="!customerList"></app-loading>
