--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -81,12 +81,8 @@
 
         </div>
 
-        <div class="container text-center">
-            <img 
-            *ngIf="!orderList"
-            class="m-5 text-center"
-            src="assets/spinner.gif">
-        </div>
-
     </div>
 </div>
+
+
+<app-loading *ngIf="!orderList"></app-loading>
